fix and put general category to top in faq

--- a/src/markdown/help/faq.mdx
+++ b/src/markdown/help/faq.mdx
@@ -7,6 +7,56 @@ thumbnailUrl: ""
 
 import { Accordion, FAQ } from '../../components/FAQ';
 
+### General
+
+<Accordion>
+
+<FAQ id="getting-started" question="How do I get started?">
+
+Read our [Getting Started](/help/getting-started/) guide.
+
+</FAQ>
+
+<FAQ id="share-numbers" question="How can I enable share numbers?">
+
+Go to your company’s *Settings* page and under your company details activate the *Share Numbers* toggle. Nice side-effect: This automatically adds consistent share numbers to your current transactions. It always takes the lowest available range of numbers for the next transaction.
+
+</FAQ>
+
+<FAQ id="convertible-loans" question="Where can I see my convertible loans?">
+
+Go to the *Transactions* page and in the *Filter* field, type *Convertible loan*.
+
+Or open the *Round Modeling* on the *Cap Table* page, click *Add* and *Remaining Convertibles*. This also allows you to simulate the conversion of the loans (see next point).
+
+</FAQ>
+
+
+<FAQ id="shareholder-groups" question="How can I create shareholder groups?">
+
+Go to the *Stakeholders* page, click the three dots next to one, click *Edit* and type the group in the respective field. By default, the groups *Founders*, *Employees* and *Investors* already exist. To add a new group, simply start typing a name in the field and click on *Create new group*.
+
+</FAQ>
+
+
+<FAQ id="custom-vesting" question="How do I define a custom vesting?">
+
+Let’s take an example: You have 80 options that vest over 48 months with 12 months cliff. After the first 12 months in which 20 options vest, each month 1 option vests for the remaining 36 months. A headache? Not with Ledgy. Choose custom vesting and define 3 periods:
+
+1.  Percentage: 25, Duration: 12, Vest every: 12 months
+2.  Percentage: 45, Duration: 36, Vest every: 1 month
+3.  Percentage: 30, Duration: 0, Vest every: 0 month
+
+</FAQ>
+
+<FAQ id="browser" question="In which browser does the app work best?">
+
+The app works best in Google Chrome and Mozilla Firefox. If you don’t use one of these browsers and notice a weird behavior, please let us know.
+
+</FAQ>
+
+</Accordion>
+
 ### Collaboration
 <Accordion>
 
@@ -84,6 +134,8 @@ There are two ways of converting convertible loans:
 
 ### Documents and Reports
 
+<Accordion>
+
 <FAQ id="cap-table-csv" question="How do I best open my cap table in CSV format?">
 
 Read our [quick guide](https://blog.ledgy.com/csv-export-96215c180194) to smoothly import CSV in Excel or Google sheets with special characters and separation formatting.
@@ -103,57 +155,7 @@ Are you looking for a more technical description of the blockchain notary? [Have
 
 </FAQ>
 
-
-### General
-
-<Accordion>
-
-<FAQ id="getting-started" question="How do I get started?">
-
-Read our [Getting Started](/help/getting-started/) guide.
-
-</FAQ>
-
-<FAQ id="share-numbers" question="How can I enable share numbers?">
-
-Go to your company’s *Settings* page and under your company details activate the *Share Numbers* toggle. Nice side-effect: This automatically adds consistent share numbers to your current transactions. It always takes the lowest available range of numbers for the next transaction.
-
-</FAQ>
-
-<FAQ id="convertible-loans" question="Where can I see my convertible loans?">
-
-Go to the *Transactions* page and in the *Filter* field, type *Convertible loan*.
-
-Or open the *Round Modeling* on the *Cap Table* page, click *Add* and *Remaining Convertibles*. This also allows you to simulate the conversion of the loans (see next point).
-
-</FAQ>
-
-
-<FAQ id="shareholder-groups" question="How can I create shareholder groups?">
-
-Go to the *Stakeholders* page, click the three dots next to one, click *Edit* and type the group in the respective field. By default, the groups *Founders*, *Employees* and *Investors* already exist. To add a new group, simply start typing a name in the field and click on *Create new group*.
-
-</FAQ>
-
-
-<FAQ id="custom-vesting" question="How do I define a custom vesting?">
-
-Let’s take an example: You have 80 options that vest over 48 months with 12 months cliff. After the first 12 months in which 20 options vest, each month 1 option vests for the remaining 36 months. A headache? Not with Ledgy. Choose custom vesting and define 3 periods:
-
-1.  Percentage: 25, Duration: 12, Vest every: 12 months
-2.  Percentage: 45, Duration: 36, Vest every: 1 month
-3.  Percentage: 30, Duration: 0, Vest every: 0 month
-
-</FAQ>
-
-<FAQ id="browser" question="In which browser does the app work best?">
-
-The app works best in Google Chrome and Mozilla Firefox. If you don’t use one of these browsers and notice a weird behavior, please let us know.
-
-</FAQ>
-
 </Accordion>
-
 
 ### Legal
 
