--- a/src/markdown/help/faq.mdx
+++ b/src/markdown/help/faq.mdx
@@ -95,6 +95,13 @@ Ledgy lets you work with multiple admins on the cap table. You can see a change 
 
 </FAQ>
 
+
+<FAQ id="valuation" question="Why do my shareholder see no valuation in their portfolio?">
+
+A _Valuation_ must be inserted and commited on the _Transactions_ page.
+
+</FAQ>
+
 </Accordion>
 
 
