--- a/src/markdown/help/faq.mdx
+++ b/src/markdown/help/faq.mdx
@@ -60,7 +60,7 @@ The app works best in Google Chrome and Mozilla Firefox. If you don’t use one 
 Yes, let’s say Bob holds shares through Alice. Then you can show your cap table both in legal and economic terms. Here’s how to set it up:
 
 1. Go on the *Stakeholder* page, add the economic stakeholder as a new one, edit the legal owner and add the economic owner as its beneficiary.
-2. Go to the *Transactions page, click *Add* and *Issue*. In the *To* field you can now select *Bob (via Alice)*.
+2. Go to the *Transactions* page, click *Add* and *Issue*. In the *To* field you can now select *Bob (via Alice)*.
 3. Go to the *Cap Table* page, and you’ll see a new button *Legal* at the top left. Clicking it will switch to *Economic* view, showing Bob instead of Alice. Notice the small *via Alice* badge next to his shares.
 
 You can also mix direct and indirect investments. For example Alice can hold some shares, as well as Bob through Alice.
