Make Trusts example in FAQ more clear

--- a/src/markdown/help/faq.mdx
+++ b/src/markdown/help/faq.mdx
@@ -57,15 +57,15 @@ The app works best in Google Chrome and Mozilla Firefox. If you don’t use one 
 
 <FAQ id="trusts" question="Can I manage pooled investments / trusts in my cap table? Can Ledgy differentiate between legal and economic owner?">
 
-Yes, let’s say Bob holds shares through Alice. Then you can show your cap table both in legal and economic terms. Here’s how to set it up:
+Yes, let’s say Bob and Alice hold shares through Bobs Trust Inc. Then you can show your cap table both in legal and economic terms. Here’s how to set it up:
 
-1. Go on the *Stakeholder* page, add the economic stakeholder as a new one, edit the legal owner and add the economic owner as its beneficiary.
-2. Go to the *Transactions* page, click *Add* and *Issue*. In the *To* field you can now select *Bob (via Alice)*.
-3. Go to the *Cap Table* page, and you’ll see a new button *Legal* at the top left. Clicking it will switch to *Economic* view, showing Bob instead of Alice. Notice the small *via Alice* badge next to his shares.
+1. Go on the *Stakeholder* page, add the Bob, Alice and Bobs Trust Inc. as new stakeholders, edit Bobs Trust Inc. and add Bob and Alice as its beneficiaries.
+2. Go to the *Transactions* page, click *Add* and *Issue*. In the *To* field you can now select *Bob (via Bobs Trust Inc)* and *Alice (via Bobs Trust Inc).
+3. Go to the *Cap Table* page, and you’ll see a new button *Legal* at the top left. Clicking it will switch to *Economic* view, showing Bob and Alice instead of Bobs Trust Inc. Notice the small *via Bobs Trust Inc* badge next to his shares.
 
-You can also mix direct and indirect investments. For example Alice can hold some shares, as well as Bob through Alice.
+You can also mix direct and indirect investments. For example Bobs Trust Inc. can hold some shares, as well as Bob through Bobs Trust Inc.
 
-Bob will also see his indirect holdings in his Portfolio, with a *via Alice* badge.
+Bob will also see his indirect holdings in his Portfolio, with a *via Bobs Trust Inc* badge.
 
 
 </FAQ>
