--- a/src/markdown/help/faq.mdx
+++ b/src/markdown/help/faq.mdx
@@ -59,13 +59,13 @@ The app works best in Google Chrome and Mozilla Firefox. If you don’t use one 
 
 Yes, let’s say Bob and Alice hold shares through Bobs Trust Inc. Then you can show your cap table both in legal and economic terms. Here’s how to set it up:
 
-1. Go on the *Stakeholder* page, add the Bob, Alice and Bobs Trust Inc. as new stakeholders, edit Bobs Trust Inc. and add Bob and Alice as its beneficiaries.
-2. Go to the *Transactions* page, click *Add* and *Issue*. In the *To* field you can now select *Bob (via Bobs Trust Inc)* and *Alice (via Bobs Trust Inc).
-3. Go to the *Cap Table* page, and you’ll see a new button *Legal* at the top left. Clicking it will switch to *Economic* view, showing Bob and Alice instead of Bobs Trust Inc. Notice the small *via Bobs Trust Inc* badge next to his shares.
+1. Go on the *Stakeholder* page, add Bob, Alice and Bobs Trust Inc. as new stakeholders, edit Bobs Trust Inc. and add Bob and Alice as its beneficiaries.
+2. Go to the *Transactions* page, click *Add* and *Issue*. In the *To* field you can now select *Bob (via Bobs Trust Inc.)* and *Alice (via Bobs Trust Inc.)*.
+3. Go to the *Cap Table* page, and you’ll see a new button *Legal* at the top left. Clicking it will switch to *Economic* view, showing Bob and Alice instead of Bobs Trust Inc. Notice the small *via Bobs Trust Inc.* badge next to his shares.
 
 You can also mix direct and indirect investments. For example Bobs Trust Inc. can hold some shares, as well as Bob through Bobs Trust Inc.
 
-Bob will also see his indirect holdings in his Portfolio, with a *via Bobs Trust Inc* badge.
+Bob will also see his indirect holdings in his Portfolio, with a *via Bobs Trust Inc.* badge.
 
 
 </FAQ>
