use different approach

--- a/src/markdown/help/getting-started.mdx
+++ b/src/markdown/help/getting-started.mdx
@@ -2,6 +2,11 @@
 date: "2019-02-06"
 title: "Getting Started"
 description: "Getting started with Ledgy"
+images:
+  - portfolio-welcome.png
+  - company-welcome.png
+  - stakeholders.png
+  - attach-documents.png
 ---
 
 When you first sign up on Ledgy you will see this screen:
@@ -40,7 +45,7 @@ If you choose not to use the onboarding steps above, here are the basics of how 
 
 ##### Commit your draft
 
-All the new transactions you’ve added will be saved as your new draft. New or modified transactions are marked in gray. The question-mark below the transaction number tells you what has changed. 
+All the new transactions you’ve added will be saved as your new draft. New or modified transactions are marked in gray. The question-mark below the transaction number tells you what has changed.
 
 Once you are done with adding and editing transactions, you can hit the _Commit_ button to save your draft as your new official transactions list. Don’t worry; you will be prompted to review your changes before confirming and can still make changes to your transactions after committing.
 
