--- a/src/markdown/blog/pre-and-post-money-option-pools.mdx
+++ b/src/markdown/blog/pre-and-post-money-option-pools.mdx
@@ -3,7 +3,7 @@ date: "2019-02-25"
 title: "The basics of pre- and post-money option pools"
 description: "If you’ve never understood what’s a pre- and post-money option pool, here’s your chance."
 images:
-  - ./pre-and-post-money-option-pools.png
+  - pre-and-post-money-option-pools.png
 ---
 
 
@@ -13,7 +13,7 @@ If you’ve never understood what’s a pre- and post-money option pool here’s
 
 Sheryl and Elon are two good friends who decided to co-found a company called SpaceBook (the social network for aspiring communities on Mars). Their initial cap table looks as below, with the total number of shares being 1 million:
 
-<Image1 width="400" align="right" />
+![](pre-and-post-money-option-pools.png)
 
 
 They now want to raise a seed round. They manage to get a deal with an investor, Peter:
