--- a/src/markdown/help/getting-started.mdx
+++ b/src/markdown/help/getting-started.mdx
@@ -11,11 +11,11 @@ images:
 
 When you first sign up on Ledgy you will see this screen:
 
-![](portfolio-welcome.png)
+<Img src="portfolio-welcome.png" />
 
 To create a cap table click on _Create company_. This will then lead you to a welcome screen:
 
-![](company-welcome.png)
+<Img src="company-welcome.png" />
 
 The easiest way is to follow our onboarding by clicking on the _Guide me_ button (you can still return to the welcome screen at any time). Is anything unclear to you? Check our [FAQ](/help/faq/) and if you can’t find an answer there, just [let us know](/contact/)!
 
@@ -31,7 +31,7 @@ If you choose not to use the onboarding steps above, here are the basics of how 
 - Change access level: If the shareholder has an email address, they can see their investment in their portfolio. You can easily give them view-only or admin rights with a single click. If they’re already on Ledgy, they’ll be notified. If they’re not, you have to click _Invite_, see next point.
 - Invite stakeholders: You can invite the shareholders that you’ve added with an email address to join Ledgy. Simply click on the invite button. You can see who already registered on Ledgy if they have a check mark instead of the invite button.
 
-![](stakeholders.png)
+<Img src="stakeholders.png" />
 
 ##### Add new transactions
 
@@ -39,7 +39,7 @@ If you choose not to use the onboarding steps above, here are the basics of how 
 - Click on _Add Transactions_ and choose the transaction you’d like to add. Fill in the required details and click on save.
 - Once the transaction appears in the transactions list, you can also __attach the corresponding documents__ such as a legal contract:
 
-![](attach-documents.png)
+<Img src="attach-documents.png" />
 
 - Once you are done with adding all new transactions, click on the _Commit_ button (read on to find out why).
 
