--- a/src/markdown/blog/pre-and-post-money-option-pools.mdx
+++ b/src/markdown/blog/pre-and-post-money-option-pools.mdx
@@ -22,10 +22,22 @@ They now want to raise a seed round. They manage to get a deal with an investor,
 
 This means that Peter will receive 9.09% of the company. How do we know that?
 
--   We know the price per share = pre-money valuation / total number of shares pre-money = $5 million / 1 million shares = $5
--   Peter will receive the following number of shares: her investment / price per share = 100,000 shares
--   The new total number of shares in the company is 1 million + 100,000 = 1.1 million
--   Peter’s total number of shares / new total number of shares in the company = 9.09%
+-   We know the share price:
+$$
+\text{pricePerShare} = \frac{\text{preMoneyValuation}}{\text{preMoneyShares}} = \frac{\text{\$5 million}}{\text{1 million}} = \$5
+$$
+-   Peter will receive the following number of shares:
+$$
+\frac{\text{Peter’s investment}}{\text{pricePerShare}} = \text{100,000 shares}
+$$
+-   The new total number of shares in the company:
+$$
+\text{postMoneyShares} = \text{preMoneyShares} + \text{100,000} = 1.1\text{ million}
+$$
+-   Peter’s percentage:
+$$
+\frac{\text{preMoneyShares}}{\text{postMoneyShares}} = 9.09\%
+$$
 
 #### Option Pool
 
