--- a/src/markdown/blog/blockchain-notary.mdx
+++ b/src/markdown/blog/blockchain-notary.mdx
@@ -8,7 +8,7 @@ At Ledgy we’re building a new way of managing the cap table and equity of priv
 
 The blockchain notary aims to help startups with their due diligence processes during fundraising or acquisitions. It can attest that a document has been uploaded to our system and since then has not been modified by any party, including us.
 
-> Visit [demo.ledgy.com](https://demo.ledgy.com) to see the blockchain notary live in action. Go to the Documents page and upload a PDF file. That’s it.
+> Visit [demo.ledgy.com](https://demo.ledgy.com) to see the blockchain notary live in action. Go to the [Documents](https://demo.ledgy.com/XihSjPeB9BeP86TK2/documents) page and upload a PDF file. That’s it.
 
 > Alternatively, go to [demo.ledgy.com/notary](https://demo.ledgy.com/notary) and select any local file to check if it has previously been uploaded to Ledgy. You can try this [example document](https://demo.ledgy.com/document/8eJ_K64Epos4_TLH6AuXt5).
 
@@ -32,9 +32,7 @@ Ledgy instead creates a certificate, which consists of a JSON file, that is sign
 -   Document hash (SHA256)
 -   User-ID and Company-ID on the Ledgy platform
 
-The Curve25519 public key for all certificates is represented in Base64 as
-
-gs04X1XPvYqg0zlsXCcRj+ZvxeHjqOBg1Ac8PZB4UR0=
+The Curve25519 public key for all certificates is represented in Base64 as `gs04X1XPvYqg0zlsXCcRj+ZvxeHjqOBg1Ac8PZB4UR0=`
 
 #### The Stamp
 
