--- a/src/markdown/press-release/share-dispenser.mdx
+++ b/src/markdown/press-release/share-dispenser.mdx
@@ -7,9 +7,9 @@ images:
   - timo.jpg
 ---
 
-Am Mittwoch gab es in der Schweiz große Neuigkeiten: Die Equility AG, auch bekannt unter dem Namen Alethena, hat ihre eigenen Firmenanteile öffentlich über die Blockchain zum Verkauf angeboten. Ursprünglich startete das Unternehmen mit einer Service für ICO-Ratings. Als neues Feld kommt nun die Tokenisierung von Unternehmensanteilen hinzu.
+**Am Mittwoch gab es in der Schweiz große Neuigkeiten: Die Equility AG, auch bekannt unter dem Namen Alethena, hat ihre eigenen Firmenanteile öffentlich über die Blockchain zum Verkauf angeboten. Das Besondere an diesem Ansatz ist, dass keinerlei persönliche Verifizierung (KYC) notwendig ist, um Tokens zu kaufen zu können.**
 
-Weltpremiere bei diesem Ansatz ist, dass keinerlei persönliche Verifizierung (KYC) notwendig ist, um Tokens zu kaufen zu können. Interessierte besuchen dazu lediglich die Webseite des [Aktienautomates](https://aktienautomat.ch) und können über einen Ethereum-fähigen Browser direkt Tokens der Equility AG erwerben. Ermöglich wird dies durch ein einfaches Konzept: Die Tokens und Unternehmensanteile sind entkoppelt. Wer den Token besitzt, ist noch nicht automatisch Aktionär der Equility AG.
+Ursprünglich startete das Unternehmen mit einer Service für ICO-Ratings. Als neues Feld kommt nun die Tokenisierung von Unternehmensanteilen hinzu. Der Launch des [Aktienautomates](https://aktienautomat.ch) von Equility ist jedoch Weltpremiere. Interessierte besuchen dazu lediglich die Webseite des Aktienautomates und können über einen Ethereum-fähigen Browser direkt Tokens der Equility AG erwerben. Ermöglich wird dies durch ein einfaches Konzept: Die Tokens und Unternehmensanteile sind entkoppelt. Wer den Token besitzt, ist noch nicht automatisch Aktionär der Equility AG.
 
 Hier kommt die Kooperation von Equility und Ledgy ins Spiel. Ledgy ist eine Cloud-basierte Software zur Verwaltung von Unternehmensanteilen. Auf der Plattform können die aktuellen Besitzverhältnisse, Zustand aller ESOP-Verträge mit komplexen Vesting-Plänen und neue Finanzierungsrunden simuliert und verwaltet werden.
 Ledgy basiert auf einem Transaktionsmodell. Es werden lediglich neue Aktienausgaben und Übertragungen erfasst, aus diesen wird dann jeweils der aktuelle “Cap Table” berechnet. Wie bei einem Bankkonto. Ledgy ist in der Lage, die Ereignisse aus dem Smart Contract auszulesen und daraus ein vollständiges Aktenregister zu erstellen. Um somit rechtsmäßiger Aktionär am Unternehmen zu werden, muss ein Interessent zuerst Tokens halten und sich anschließend mit seiner Ethereum-Adresse, Name und Postanschrift auf Ledgy registrieren. Sobald der Verwaltungsrat des Unternehmens nun ein neues Aktienregister auf Ledgy erstellt und beglaubigt, ist aus dem Token-Besitzer ein Aktien-Besizter geworden.
