fix image size and float

--- a/src/markdown/blog/csv-export.mdx
+++ b/src/markdown/blog/csv-export.mdx
@@ -29,9 +29,10 @@ To open your CSV file optimally in Microsoft Excel or Google Sheets you need to 
 6.  Click on `Advanced…` and set decimal separator to dot `.` and thousands separator to a comma `,`.
 7.  Click on ok and finish.
 
+<Img src="google-import.png" align="right" size="300" />
+
 #### Quick guide to open CSV in Google Sheets
 
-<Img src="google-import.png" align="right" />
 
 1.  Create a blank google sheet.
 2.  Click on `File` → `Import`. Choose the Upload tab and upload your CSV file.
@@ -40,4 +41,4 @@ To open your CSV file optimally in Microsoft Excel or Google Sheets you need to 
 
 #### Learnings
 
-With a score of 4 against 7 setup steps Google does a better job than Microsoft to import CSV files 😃
+With a score of 4 against 7 setup steps, Google does a better job than Microsoft to import CSV files 😃
