cover image draft

--- a/src/markdown/blog/convertible-loans.mdx
+++ b/src/markdown/blog/convertible-loans.mdx
@@ -2,6 +2,7 @@
 date: "2017-12-04"
 title: "Calculating a financing round with convertible loans"
 description: "Investment rounds can get tricky to calculate when convertible rounds with cap and discount come into play. So let’s have a look at how that works."
+featuredImage: convertible-loans/why.jpeg
 images:
   - convertible-loans/why.jpeg
   - convertible-loans/chart.png
