logos and about

--- a/src/markdown/press-release/share-dispenser.mdx
+++ b/src/markdown/press-release/share-dispenser.mdx
@@ -1,15 +1,19 @@
 ---
-date: "2019-03-07"
 title: "Bridging the Gap—Von Blockchain-Tokens zu echten Gesellschaftsanteilen"
-description: "If you’ve never understood what’s a pre- and post-money option pool (aka. the option pool shuffle), here’s your chance."
+description: "Am Mittwoch gab es in der Schweiz große Neuigkeiten: Die Equility AG, auch bekannt unter dem Namen Alethena, hat ihre eigenen Firmenanteile öffentlich über die Blockchain zum Verkauf angeboten. Das Besondere an diesem Ansatz ist, dass keinerlei persönliche Verifizierung (KYC) notwendig ist, um Tokens kaufen zu können."
 images:
   - share-dispenser/dispenser.jpeg
-  - timo.jpg
+  - ../timo.jpg
+  - ../ledgy-icon.png
+  - alethena-icon.png
+  - lexr-icon.png
 ---
 
-**Am Mittwoch gab es in der Schweiz große Neuigkeiten: Die Equility AG, auch bekannt unter dem Namen Alethena, hat ihre eigenen Firmenanteile öffentlich über die Blockchain zum Verkauf angeboten. Das Besondere an diesem Ansatz ist, dass keinerlei persönliche Verifizierung (KYC) notwendig ist, um Tokens zu kaufen zu können.**
+Zürich, 8. März 2019
 
-Ursprünglich startete das Unternehmen mit einer Service für ICO-Ratings. Als neues Feld kommt nun die Tokenisierung von Unternehmensanteilen hinzu. Der Launch des [Aktienautomates](https://aktienautomat.ch) von Equility ist jedoch Weltpremiere. Interessierte besuchen dazu lediglich die Webseite des Aktienautomates und können über einen Ethereum-fähigen Browser direkt Tokens der Equility AG erwerben. Ermöglich wird dies durch ein einfaches Konzept: Die Tokens und Unternehmensanteile sind entkoppelt. Wer den Token besitzt, ist noch nicht automatisch Aktionär der Equility AG.
+**Am Mittwoch gab es in der Schweiz große Neuigkeiten: Die Equility AG, besser bekannt unter dem Namen Alethena, hat ihre eigenen Firmenanteile öffentlich über die Blockchain zum Verkauf angeboten. Das Besondere an diesem Ansatz ist, dass keinerlei persönliche Verifizierung (KYC) notwendig ist, um Tokens kaufen zu können.**
+
+Ursprünglich startete das Unternehmen mit einer Service für ICO-Ratings. Als neues Feld kommt nun die Tokenisierung von Unternehmensanteilen hinzu. Der Launch des [Aktienautomates](https://aktienautomat.ch) von Equility ist jedoch Weltpremiere. Interessierte besuchen dazu lediglich die Webseite des Aktienautomates und können über einen Ethereum-fähigen Browser direkt Tokens der Equility AG erwerben. Ermöglicht wird dies durch ein einfaches Konzept: Die Token sind Wertrechte und von den Gesellschaftsrechten der Anteile entkoppelt. Wer den Token besitzt, ist noch nicht automatisch Aktionär der Equility AG.
 
 Hier kommt die Kooperation von Equility und Ledgy ins Spiel. Ledgy ist eine Cloud-basierte Software zur Verwaltung von Unternehmensanteilen. Auf der Plattform können die aktuellen Besitzverhältnisse, Zustand aller ESOP-Verträge mit komplexen Vesting-Plänen und neue Finanzierungsrunden simuliert und verwaltet werden.
 Ledgy basiert auf einem Transaktionsmodell. Es werden lediglich neue Aktienausgaben und Übertragungen erfasst, aus diesen wird dann jeweils der aktuelle “Cap Table” berechnet. Wie bei einem Bankkonto. Ledgy ist in der Lage, die Ereignisse aus dem Smart Contract auszulesen und daraus ein vollständiges Aktenregister zu erstellen. Um somit rechtsmäßiger Aktionär am Unternehmen zu werden, muss ein Interessent zuerst Tokens halten und sich anschließend mit seiner Ethereum-Adresse, Name und Postanschrift auf Ledgy registrieren. Sobald der Verwaltungsrat des Unternehmens nun ein neues Aktienregister auf Ledgy erstellt und beglaubigt, ist aus dem Token-Besitzer ein Aktien-Besizter geworden.
@@ -18,8 +22,31 @@ Ledgy basiert auf einem Transaktionsmodell. Es werden lediglich neue Aktienausga
 " />
 
 Diese Trennung erlaubt es, die Tokens frei handelbar zu gestalten, ohne dabei für jeden Transfer einen aufwändigen und kostspieligen KYC-Prozess zu durchlaufen. Ledgy ist durch seine Technologie in der Lage, aus allen Ethereum-Transaktionen ein vollständige Historie des Aktienregisters zu ermitteln, welche nur Übertragungen zwischen rechtmäßigen Aktionären beinhaltet.
-Der Start des Aktienautomates dient hierbei als Proof-of-Concept, bei dem lediglich 2.000 Aktien der Equility AG zum Preis von durchschnittlich 5,50 EUR herausgeben werden. In Zukunft soll jedoch ein Service angeboten werden, mit dem jede in der Schweiz ansässige Firma ihre Firmenanteile auf der Blockchain zum Handel anbieten kann.
+Die legale Umsetzung wurde von Lexr übernommen. Die Anwaltskanzlei aus Zürich hat sich zum Ziel gesetzt, mit dem Einsatz moderner Tools und neuartiger Konzepte legale Services für Startups zu transparenten Konditionen und fixen Preisen anbieten zu können. Der Start des Aktienautomates dient hierbei als Proof-of-Concept, bei dem lediglich 2.000 Aktien der Equility AG zum Preis von durchschnittlich 5,50 EUR herausgeben werden. In Zukunft soll jedoch ein Service angeboten werden, mit dem jede in der Schweiz ansässige Firma ihre Firmenanteile auf der Blockchain zum Handel anbieten kann.
+
+<Img src="timo.jpg" align="right" size="150" />
 
 ##### Zur Person
-<Img src="timo.jpg" align="right" size="200" />
-Timo Horstschäfer ist Gründer und CTO der Ledgy AG in der Schweiz. Das Startup bietet eine Cloud-Software zum Verwalten von Gesellschafterlisten und Mitarbeiterbeteiligungen, sowie Werkzeuge zur Modellierung von komplexen Finanzierungsrunden und Exit-Szenarien. Er schloss 2016 sein Studium mit einem Master of Science in Physik an der ETH Zürich ab. Ein Jahr später gründete er zusammen mit zwei Studienkollegen die Ledgy AG. Sein Ziel ist, ein europäisches Zentralregister für Unternehmensanteile zu etablieren und damit mehr Handelbarkeit in private Firmananteile zu bringen. Anschließend möchte er einen Weltraumlift bauen.
+[Timo Horstschäfer](https://www.ledgy.com/about-us/) ist Gründer und CTO der Ledgy AG in der Schweiz. Das Startup bietet eine Cloud-Software zum Verwalten von Gesellschafterlisten und Mitarbeiterbeteiligungen, sowie Werkzeuge zur Modellierung von komplexen Finanzierungsrunden und Exit-Szenarien. Er schloss 2016 sein Studium mit einem Master of Science in Physik an der ETH Zürich ab. Ein Jahr später gründete er zusammen mit zwei Studienkollegen die Ledgy AG. Sein Ziel ist, ein europäisches Zentralregister für Unternehmensanteile zu etablieren und damit mehr Handelbarkeit in private Firmananteile zu bringen. Anschließend möchte er einen Weltraumlift bauen.
+
+
+
+<Img src="ledgy-icon.png" align="right" size="120" />
+
+##### Über Ledgy
+
+[Ledgy](https://www.ledgy.com) ist ein Zürcher Startup, das es ermöglicht, das Aktienbuch einer Aktiengesellschaft online zu führen. Ledgy zählt bereits über 250 Firmen zu seinen Kunden. Bei tokenisierten Aktien kann Ledgy die Blockchain-Transaktionen automatisch im Aktienbuch nachvollziehen, sofern sich der
+Empfänger der Token registriert hat.
+
+<Img src="alethena-icon.png" align="right" size="100" />
+
+##### Über Alethena
+
+[Alethena](https://www.alethena.com) ist ein auf Blockchain-Applikationen und Digitalisierung spezialisiertes Schweizer FinTech-Unternehmen, welches technologische Lösungen im Bereich der Tokenisierung von Firmenaktien, sowie deren Handelbarkeit anbietet.
+
+
+<Img src="lexr-icon.png" align="right" size="100" />
+
+##### Über Lexr
+
+[Lexr](https://www.lexr.ch/) ist ein Zürcher Rechtsdienstleister, der es sich zum Ziel gesetzt hat Unternehmer und Gründer mit effizienten und zielführenden Lösungen zu unterstützen. Lexr ist verantwortlich für die rechtliche Ausgestaltung des Aktienautomats.
